@@ -7,8 +7,13 @@ Changelog.Parser=Config::IniFiles V 2.78
 Date=2013-06-11T17:04:00
 Comments= <<EOT
 - Fix some tests which had stopped working.
-- Implement user-specified class names for inflation of objects.
-See t/save_to_file.t for sample code.
+- Implement user-specified class names for deflation/inflation of objects.
+This was requested in a module review: http://cpanratings.perl.org/dist/Tree-Persist#10829.
+The new code uses Module::Runtime.
+This also means the 'type' parameter to connect() and create_datastore() is no longer mandatory.
+Instead, a 'class' parameter can be used to supply the name of a deflator/inflator class.
+See t/load_from_file.t and t/save_and_load.t for sample code.
+- Replace UNIVERSAL::require with Module::Runtime in various modules.
 - Update PODs.
 - Rename test files from \d\d\d_*.t to *.t.
 EOT
