@@ -2,8 +2,11 @@ Revision history for Perl distribution Tree::Persist
 
 1.03  Tue Jun 11 17:04:00 2013
 	- Fix some tests which had stopped working.
-	- Implement user-specified class names for inflation of objects.
-		This uses Module::Runtime.
+	- Implement user-specified class names for deflation/inflation of objects.
+		This was requested in a module review: http://cpanratings.perl.org/dist/Tree-Persist#10829.
+		The new code uses Module::Runtime.
+		This also means the 'type' parameter to connect() and create_datastore() is no longer mandatory.
+		Instead, a 'class' parameter can be used to supply the name of a deflator/inflator class.
 		See t/load_from_file.t and t/save_and_load.t for sample code.
 	- Replace UNIVERSAL::require with Module::Runtime in various modules.
 	- Update PODs.
